src/assets/styles.css
/* reset */
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
}

ol, ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: inherit;
}

button {
    all: unset;
    display: inline-block;
    cursor: pointer;
}

/* is:global */
:root {
    color-scheme: dark;
    --black: #1D1D1B;
    --white: #F5F5F5;
    --padding: 1.5rem;
}

@font-face {
    font-family: 'Jokker';
    src: url('/fonts/JokkerTRIALVF.woff2') format('woff2'),
            url('/fonts/JokkerTRIALVF.woff') format('woff');
    font-weight: 100 900;
    font-style: normal;
}

html {
    font-family: 'Jokker', sans-serif;
    font-size: 14px;
    font-weight: 336;
    line-height: 1.2;
    color: var(--white);
    background-color: var(--black)
}

h1, h2, h3, h4, h5, h6 {
    font-weight: 470;
}

::selection{
    background-color: var(--white);
    color: var(--black);
} 

/* header */
header {
    position: fixed;
    padding: var(--padding);
    height: 100vh;
    pointer-events: none;
    width: 100%;
    display: flex;
    justify-content: space-between;
    z-index: 100;
}

.title-name {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: clamp(1.5rem, 6vw, 3rem);
    text-align: center;
    white-space: nowrap;
    overflow: hidden;
    filter: blur(.5rem);
    z-index: 100;
    pointer-events: none;
    transition: filter .3s ease;
    overflow: visible;
}

.view-style,
.nav {
    display: flex;
    flex-direction: column;
    gap: .5rem;
    pointer-events: auto;
}

a.current-page {
    text-decoration: underline;
}

.nav {
    text-align: right;
}

.social {
    position: absolute;
    bottom: var(--padding);
    left: var(--padding);
    display: flex;
    flex-direction: column;
    gap:.5rem;
    pointer-events: auto;
}

.view-style a:hover,
.nav a:hover,
.social a:hover {
    text-decoration: underline;
}

/* feed */
.feed {
    position: fixed;
    inset: 0;
    height: 100dvh;
    overflow: auto;
    /* cursor: grab; */
    z-index: 90;
}

.feed.grabbing {
    cursor: grabbing;
}

.feed-grid {
    display: grid;
    grid-template-columns: repeat(24, minmax(0, 1fr));
    user-select: none;
}

.feed-project {
    position: relative;
    width: 100%;
    height: 100%;
}

.feed-project-fig {
    display: flex;
    align-items: flex-end;
    justify-items: flex-end;
    width: 100%;
    height: 100%;
    object-fit: cover;

    img {
        width: 100%;
        height: 100%;
        object-fit: cover;
    }
}

.feed-project-title {
    position: absolute;
    padding-top: .5rem;
    font-size: 1rem;
    font-weight: 336;
    text-transform: uppercase;
    opacity: 0;
    transition: opacity .3s linear;
}

.feed-project:hover .feed-project-title {
    opacity: 1;
}

/* data-previews */
[data-preview="1"] {
    grid-column: 6 / span 11;
}

[data-preview="2"] {
    grid-column: 15 / span 8;
}

[data-preview="3"] {
    grid-column: 3 / span 12;
}

[data-preview="4"] {
    grid-column: 15 / span 10;
}

[data-preview="5"] {
    grid-column: 3 / span 6;
}

[data-preview="6"] {
    grid-column: 9 / span 11;
}

[data-preview="7"] {
    grid-column: 16 / span 10;
}

[data-preview="8"] {
    grid-column: 2 / span 12;
}

[data-preview="9"] {
    grid-column: 11 / span 14;
}

[data-preview="10"] {
    grid-column: span 9;
}

[data-preview="11"] {
    grid-column: 13 / span 10;
}

[data-preview="12"] {
    grid-column: 2 / span 13;
}

[data-preview] {
    margin-top: 2rem;
}

@media (min-width: 768px) {
    .feed-grid {
        gap: 2rem;
    }

    [data-preview] {
        margin-top: 4rem;
    }
}

@media (min-width: 1024px) {
    .feed-grid {
        gap: 3rem;
    }
}

